--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="cv.css">
+    <style>
+        h2{
+            color:dodgerblue;
+            background:rgb(194, 192, 192);
+            width:100px;
+        }
+    </style>
 </head>
 <body>
-<img src="img1.png" alt="Smiley face" width="700" height="800" style="vertical-align:bottom">
+    <h1 align="center">个人简历</h1>
+<table>
+        <h2>个人资料</h2>
+    <tr>
+        <td>姓名:</td>
+        <td>_____</td>
+        <td>电话:</td>
+        <td>_____</td>
+        <td>性别：</td>
+        <td>_____</td>  
+    </tr>
+</table>
+<h2>就读学校</h2>
+<p>工聯職業技術中學</p>
+<br>
+<h2>个人成绩</h2>
+<p>初一起成绩保持班级前2名</p>
+<br>
+<h2>奖学金</h2>
+<ul>
+    <li>2019/2020中国银行《品学兼优学生》奖学金</li>
+    <li>2019/2020澳门基金会《分科奖学金》</li>
+    <li>2022育苗奖学金</li>
+</ul>
+<br>
+<h2>奖项</h2>
+<ul>
+    <li>2019/2020数学科比赛 亚军</li>
+    <li>澳门基金会科学与科技奖（2020~2022连续兩界）</li>
+    <li>2021/2022全国青少年智能创新大赛  三等奖</li>
+    <li>2021/2022莲花奖</li>
+</ul>
 </body>
 </html>
