--- a/index.html
+++ b/index.html
@@ -5,16 +5,11 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="cv.css">
-    <style>
-        h2{
-            color:dodgerblue;
-            background:rgb(194, 192, 192);
-            width:100px;
-        }
-    </style>
 </head>
 <body>
+    <a href="game.html">前往game</a>
     <h1 align="center">个人简历</h1>
+    
 <table>
         <h2>个人资料</h2>
     <tr>
@@ -46,5 +41,6 @@
     <li>2021/2022全国青少年智能创新大赛  三等奖</li>
     <li>2021/2022莲花奖</li>
 </ul>
+
 </body>
 </html>
