--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
 <br>
 
-
 <h2>个人成绩</h2>
 <p>初一起成绩保持班级前2名</p>
 
@@ -59,5 +58,11 @@
 </td>
 </tr>
 </table>
+<div id="bin">
+    <img src="img1.png">
+    <img src="img1.png">
+    <img src="img1.png">
+    <img src="img1.png">
+    </div>
 </body>
 </html>
